--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="stylesheets/style.css">
     <style media="screen">
 
 @font-face {
@@ -24,33 +25,61 @@ body{
         nav{
           width: 100vw;
           height: 144px;
-          display: flex;
+          display: grid;
           font-family: "Pragmatica_Italic";
-          /* flex-direction: row; */
+          box-sizing: border-box;
+          grid-template-rows: 2;
+          grid-template-columns: repeat(8, 1fr);
+
 
         }
         a{
-          width: 100%;
+
           height: 72px;
-          border: solid 1px black;
+          box-sizing: border-box;
+          display: inline-grid;
+          border-right: solid 1px black;
+          border-bottom:solid 1px black;
           /* align-items:  center; */
           text-align: center;
-          vertical-align: middle;
           text-decoration: none;
+          align-items: center;
         }
-       1{}
+        #s1{
+          height: 144px;
+          grid-area: 1/1/3/3;
+        }
+        #s2{ grid-area:1/3/2/6; }
+        #s3{ grid-area:1/5/2/9; }
+        #s4{ grid-area:2/3/3/5; }
+        #s5{ grid-area:2/5/3/7; }
+        #s6{ grid-area:2/7/3/9; }
+
+
+       #s1, #s4, #s5, #s6{
+          /* width: 1fr; */
+          width: 25vw;
+       }
+        /* #s4{ grid-area: 2/2/3/3} */
+
+       }
+       #s2,#s3{
+         /* width: 1fr; */
+         width: 37.5vw;
+
+       }
 
     </style>
   </head>
   <body>
     <nav>
 
-        <a id="1" href="index.html">impress</a>
-        <a  id="2" href="#">посещение</a>
-        <a id="3"  href="#">афиша</a>
-          <a id="4"  href="events.html">события</a>
-          <a id="5"  href="#">магазин</a>
-          <a id="6"  href="#">о музее</a>
+        <a id="s1" href="index.html">impress</a>
+        <a  id="s2" href="#">посещение</a>
+        <a id="s3"  href="#">афиша</a>
+          <a id="s4"  href="events.html">события</a>
+          <a id="s5"  href="#">магазин</a>
+          <a id="s6"  href="#">о музее</a>
 
 
     </nav>
