закончига главную, осталось выровнять внизу страницы надписи и расставить ссылки

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ p{
     align-items: flex-end;
     font-size: 1.2em;
     line-height: 1.5em;
+    margin-right: 1em;
 }
 .text{
   align-items: flex-end;
@@ -145,9 +146,30 @@ input{
 }
 .mail p {
   display: block;
+  display: block;
+  text-align: start;
+  margin-left: 12.5vw;
 }
 .mail input{
-  display: block;
+  display: inline-block;
+  text-align: start;
+  margin-left: 12.5vw;
+  vertical-align: middle;
+  
+}
+.mail button {
+  cursor: pointer;
+  display: inline-block;
+  margin-left: 1em;
+  vertical-align: middle;
+  width: 6rem;
+  height:3rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: none;
+  background-image: url("images/arrow_btn.svg");
+  background-color: white;
 }
     </style>
   </head>
