--- a/index.html
+++ b/index.html
@@ -5,182 +5,17 @@
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <style media="screen">
-main{
-  width: 100vw;
-  height: auto;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr, 1fr;;
-}
-.news{
-  width: 25vw;
-  height: 20em;
-  border-right: solid 1px black;
-  border-bottom:solid 1px black;
-  box-sizing: border-box;
-position: relative;
-box-sizing: border-box;
 
-}
-.wallpaper{
-  width: 25vw;
-  height: 40em;
-  border-right: solid 1px black;
-  border-bottom:solid 1px black;
-  box-sizing: border-box;
-  grid-area: 1/4/3/5;
-}
-.unity{
-  width: 75vw;
-  height: 20em;
-  border-right: solid 1px black;
-  border-bottom:solid 1px black;
-  box-sizing: border-box;
-  grid-area: 2/1/3/4;
-}
-main{
-  font-size: 1em;
-  box-sizing: border-box;
-
-}
-
-h5{
-  font-family: "Pragmatica_Bold";
-  font-size: 2.8em;
-  text-align: center;
-  margin: 0.5em;
-}
-p{
-    font-family: "Pragmatica_Regular";
-    margin-bottom: 0.5em;
-    text-align: center;
-    vertical-align: bottom;
-    display: inline-grid;
-    align-items: flex-end;
-    font-size: 1.2em;
-    line-height: 1.5em;
-    margin-right: 1em;
-}
-.text{
-  align-items: flex-end;
-}
-main div {
-  text-align: center;
-text-decoration: none;
-align-items: flex-end;
-color: black;
-/* padding: 1em; */
-}
-.event{
-  box-sizing: border-box;
-  /* outline: 1.5em solid #E0E2D0; */
-}
-.news{
-  align-items: flex-end;
-}
-.news .mini_link{
-  position: absolute;
-  margin-bottom:
-  /* bottom: 0; */
-}
-.wallpaper{
-  background-image: url("images/katalog/03.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 236%;
-}
-.unity p {
-  padding-left: 10em;
-  padding-right:  10em;
-}
-.questions{
-width: 100vw;
-height: 2em;
-display: inline-grid;
-font-family: "Pragmatica_Bold";
-font-size: 2.8em;
-border-bottom:solid 1px black;
-grid-area: 3/1/4/9;
-   color: black;
-   -webkit-text-stroke: 1px black;
-   -webkit-text-fill-color: white;
-}
-footer{
-  width: 100vw;
-  height: 25rem;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr, 1fr;
-  box-sizing: border-box;
-  align-items: flex-end;
-}
-footer .mail {
-  width: 100vw;
-  height: 10em;
-  grid-area: 1/1/2/5;
-}
-footer .inf_blocks {
-  width: 25vw;
-  height: 10em;
-
-}
-.mini_link{
-  font-size: 1em;
-  color: #C4C4C4;
-}
-input{
-  width: 23em;
-  height: 1.8em;
-  font-size: 1.25em;
-  font-family: "Pragmatica_Italic"
-}
-.inf_blocks {
-  text-align: center;
-  display: block;
-}
-.inf_blocks a {
-  margin-bottom: 1em;
-}
-.mail{
-  align-content: flex-start;
-}
-.mail p {
-  display: block;
-  display: block;
-  text-align: start;
-  margin-left: 12.5vw;
-}
-.mail input{
-  display: inline-block;
-  text-align: start;
-  margin-left: 12.5vw;
-  vertical-align: middle;
-  
-}
-.mail button {
-  cursor: pointer;
-  display: inline-block;
-  margin-left: 1em;
-  vertical-align: middle;
-  width: 6rem;
-  height:3rem;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  border: none;
-  background-image: url("images/arrow_btn.svg");
-  background-color: white;
-}
     </style>
   </head>
   <body>
     <nav>
         <a id="s1" href="index.html"></a>
-        <a  id="s2" href="#">посещение</a>
-        <a id="s3"  href="#">афиша</a>
-          <a id="s4"  href="events.html">события</a>
-          <a id="s5"  href="#">магазин</a>
-          <a id="s6"  href="#">о музее</a>
+        <a  id="s2" href="visiting.html">посещение</a>
+        <a id="s3"  href="afisha.html">афиша</a>
+        <a id="s4"  href="events.html">события</a>
+        <a id="s5"  href="shop.html">магазин</a>
+        <a id="s6"  href="museum_info.html">о музее</a>
     </nav>
     <main>
         <div class="news">
@@ -207,37 +42,35 @@ input{
     </main>
     <footer>
 
-<div class="mail">
-    <p>Подписаться на рассылку</p>
-    <input type="email" name="email" value="tellyourname@gmail.com">
-    <button type="button" name="arrow"></button>
-</div>
-<div class="inf_blocks">
-  <p>
-  часы работы:<br>
-  пн-пт: 9:00 – 22:00 <br>
-  сб-вс: 10:00 – 00:00 <br>
-  </p>
-</div>
-<div class="inf_blocks">
-  <p>
-  +7 (945) 344 34 34 <br>
-  Малая Пионерская 12 <br>
-  musimpress.com <br>
-  </p>
-</div>
-<div class="inf_blocks">
-    <a href="#">instagram</a> <br>
-    <a href="#">facebook</a>
-
-</div>
-<div class="inf_blocks">
-  <p>
-    pepsiburger <br>
-    hse adc
-</p>
-</div>
-
+      <div class="mail">
+          <p>Подписаться на рассылку</p>
+          <input type="email" name="email" value="tellyourname@gmail.com">
+          <button type="button" name="arrow"></button>
+      </div>
+      <div class="inf_blocks">
+        <p>
+        часы работы:<br>
+        пн-пт: 9:00 – 22:00 <br>
+        сб-вс: 10:00 – 00:00 <br>
+        </p>
+      </div>
+      <div class="inf_blocks">
+        <p>
+        +7 (945) 344 34 34 <br>
+        Малая Пионерская 12 <br>
+        musimpress.com <br>
+        </p>
+      </div>
+      <div class="inf_blocks">
+          <a href="https://www.instagram.com/j0urn_ey/">instagram</a> <br>
+          <a href="https://www.facebook.com/sugumi.su/">facebook</a>
+      </div>
+      <div class="inf_blocks">
+        <p>
+          pepsiburger <br>
+          hse adc
+      </p>
+      </div>
     </footer>
 
   </body>
