--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a id="s5"  href="shop.html">магазин</a>
         <a id="s6"  href="museum_info.html">о музее</a>
     </nav>
-    <main>
+    <main class="index">
         <div class="news">
         <h5>о музее</h5>
         <p>Impress* — первый музей шрифтовых иллюзий, спроектированный под руководством дизайнеров. </p>
