--- a/museum_info.html
+++ b/museum_info.html
@@ -5,7 +5,63 @@
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <style media="screen">
-
+  .frst_part{
+    width: 100vw;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: flex-start;
+    box-sizing: border-box;
+    }
+    .scnd_part{
+      width: 100vw;
+      height: auto;
+      border: 1px solid black;
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+      grid-template-rows: 1fr,1fr;
+    }
+.video_cont{
+  width: 50vw;
+  height: auto;
+  color: black;
+  text-align: center;
+  font-family: "Pragmatica_reg";
+  grid-column-start: 2;
+  border-left: solid 1px black;
+  border-right: solid 1px black;
+  box-sizing: border-box;
+  }
+.video{
+  align-items: center;
+  width: 50vw;
+  height: 30rem;
+}
+.museum_info{
+  /* display: grid; */
+  /* grid-template-columns: repeat(1fr, 2fr, 1fr); */
+}
+.video_cont p {
+      margin: 3em;
+      font-family: "Pragmatica_Regular";
+      font-size: 1.2em;
+      line-height: 1.5em;
+}
+.scnd_part p {
+  margin: 3em;
+  font-family: "Pragmatica_Regular";
+  font-size: 1.2em;
+  line-height: 1.5em;
+  grid-area: 1/2/2/4;
+}
+.photo_cont {
+  display: inline-grid;
+  width: 25vw;
+  height: 25vw;
+  border:1px solid black;
+  border-right: none;
+  grid-row-start: 2;
+}
     </style>
     <script type="text/javascript">
 
@@ -22,6 +78,28 @@
     </nav>
 
     <main>
+      <div class="frst_part">
+        <div class="video_cont">
+          <iframe class="video" width="100%" height="85%" src="https://www.youtube.com/embed/T7Lnm95TK4w?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p>Impress* — первый музей шрифтовых иллюзий, он&nbspобъединяет в&nbspсебе две противоположные друг другу идеи: систему и&nbspхаос, шрифт и&nbspиллюзии.
+        Здесь всё&nbspспроектировано так, чтобы вы&nbspзабыли о&nbspреальности и&nbspпогрузились в&nbspмир иллюзий.
+        </p>
+        </div>
+      </div>
+      <div class="scnd_part">
+        <p>Само по&nbspсебе здание состоит из&nbspпростых геометрических форм и&nbspобъёмов. музей ­— это&nbspтрехэтажное здание. Его&nbspэтажы повёрнуты по&nbsp45&nbspградусов относительно друг-друга.
+        Главная идея самого здания ­— простор и свобода для творчества.</p>
+        <div class="photo_cont"></div>
+        <div class="photo_cont"></div>
+        <div class="photo_cont"></div>
+        <div class="photo_cont"></div>
+
+      </div>
+
+
+
+
+
 
     </main>
     <footer>
