--- a/museum_info.html
+++ b/museum_info.html
@@ -32,36 +32,99 @@
   border-right: solid 1px black;
   box-sizing: border-box;
   }
-.video{
-  align-items: center;
-  width: 50vw;
-  height: 30rem;
-}
-.museum_info{
-  /* display: grid; */
-  /* grid-template-columns: repeat(1fr, 2fr, 1fr); */
-}
-.video_cont p {
+    .video{
+      align-items: center;
+      width: 50vw;
+      height: 30rem;
+    }
+    .museum_info{
+      /* display: grid; */
+      /* grid-template-columns: repeat(1fr, 2fr, 1fr); */
+    }
+    .video_cont p {
+          margin: 3em;
+          font-family: "Pragmatica_Regular";
+          font-size: 1.2em;
+          line-height: 1.5em;
+    }
+    .scnd_part p {
       margin: 3em;
       font-family: "Pragmatica_Regular";
       font-size: 1.2em;
       line-height: 1.5em;
-}
-.scnd_part p {
-  margin: 3em;
-  font-family: "Pragmatica_Regular";
-  font-size: 1.2em;
-  line-height: 1.5em;
-  grid-area: 1/2/2/4;
-}
-.photo_cont {
-  display: inline-grid;
-  width: 25vw;
-  height: 25vw;
-  border:1px solid black;
-  border-right: none;
-  grid-row-start: 2;
-}
+      grid-area: 1/2/2/4;
+    }
+    .photo_cont {
+      display: inline-grid;
+      width: 25vw;
+      height: 25vw;
+      border:1px solid black;
+      border-right: none;
+      border-bottom: none;
+      grid-row-start: 2;
+      overflow: hidden;
+      box-sizing: border-box;
+    }
+    /* img {width: 30vw;
+    height: auto;} */
+    .all_1{
+      width: 100%;
+      height: 100%;
+      background-image: url("images/museum_info/all_1.png");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+    .all_2{
+      width: 100%;
+      height: 100%;
+      background-image: url("images/museum_info/all_2.png");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+
+    }
+    .thrd_part{
+      width: 100vw;
+      height: auto;
+      display: grid;
+      grid-template-columns: 1fr, 1fr, 1fr;
+    }
+    .floor {
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        border: 1px solid black;
+        border-right: none;
+        border-top: none;
+    }
+    .f_1{
+      grid-column-start: 1;
+    }
+    .f_2{
+      grid-column-start: 2;
+    }
+    .f_3{
+      grid-column-start: 3;
+    }
+    .floor h5 {
+      margin-top: 2em;
+      margin-bottom: 1em;
+    }
+    .floor p{
+      font-family: "Pragmatica_Regular";
+      font-size: 1.2em;
+      line-height: 1.5em;
+      margin-left: 1em;
+      margin-bottom: 3em;
+    }
+    .photo_cont_2{
+      width: 100%;
+      height: 20em;
+      background: black;
+      opacity: 0.3;
+      position: relative;
+    }
     </style>
     <script type="text/javascript">
 
@@ -86,19 +149,43 @@
         </p>
         </div>
       </div>
+
+
       <div class="scnd_part">
         <p>Само по&nbspсебе здание состоит из&nbspпростых геометрических форм и&nbspобъёмов. музей ­— это&nbspтрехэтажное здание. Его&nbspэтажы повёрнуты по&nbsp45&nbspградусов относительно друг-друга.
-        Главная идея самого здания ­— простор и свобода для творчества.</p>
+        <br><br>Главная идея самого здания ­— простор и&nbspсвобода для&nbspтворчества.</p>
+        <div class="photo_cont all_1">
+        </div>
         <div class="photo_cont"></div>
-        <div class="photo_cont"></div>
-        <div class="photo_cont"></div>
+        <div class="photo_cont all_2">
+        </div>
         <div class="photo_cont"></div>
 
       </div>
 
+      <div class="thrd_part">
+        <div class="floor f_1">
+            <h5>1 этаж</h5>
+            <p>На&nbspпервом этаже расположена входная группа, в&nbspкоторую входят гардероб, кафе, уборные и&nbspкасса для&nbspпокупки билетов.</p>
+            <div class="photo_cont_2"></div>
+        </div>
+        <div class="floor f_2">
+            <h5>2 этаж</h5>
+            <p>Второй этаж - темное пространство с&nbspпервой частю экспозиции*, в&nbspкоторой собраны раснообразные элементы ручной работы. Кадый экспонал уникален и&nbspне&nbspимеет аналогов.</p>
+            <div class="photo_cont_2"></div>
+            <div class="photo_cont_2"></div>
 
+            <p class="mini_link">*подробнее с&nbspвыставкой можно ознакомиться в&nbspкаталоге</p>
+        </div>
+        <div class="floor f_3">
+            <h5>3 этаж</h5>
+            <p>На&nbspтретьем этаже расположена вторая часть выставки, а&nbspименно глифы различных наборных шрифтов</p>
+            <div class="photo_cont_2"></div>
+            <div class="photo_cont_2"></div>
+            <div class="photo_cont_2"></div>
 
-
+        </div>
+      </div>
 
 
     </main>
