images+boldin menu-bar

--- a/events.html
+++ b/events.html
@@ -16,7 +16,7 @@
         <a id="s1" href="index.html"></a>
         <a id="s2" href="visiting.html">посещение</a>
         <a id="s3"  href="afisha.html">афиша</a>
-        <a id="s4"  href="events.html">события</a>
+        <a id="s4"  class="this_p"  href="events.html">события</a>
         <a id="s5"  href="shop.html">магазин</a>
         <a id="s6"  href="museum_info.html">о музее</a>
     </nav>
