--- a/visiting.html
+++ b/visiting.html
@@ -14,7 +14,7 @@
   <body>
     <nav>
         <a id="s1" href="index.html"></a>
-        <a  id="s2" href="visiting.html">посещение</a>
+        <a  id="s2" class="this_p" href="visiting.html">посещение</a>
         <a id="s3"  href="afisha.html">афиша</a>
         <a id="s4"  href="events.html">события</a>
         <a id="s5"  href="shop.html">магазин</a>
