--- a/museum_info.html
+++ b/museum_info.html
@@ -121,9 +121,23 @@
     .photo_cont_2{
       width: 100%;
       height: 20em;
-      background: black;
-      opacity: 0.3;
+      /* background: black; */
+      /* opacity: 0.3; */
       position: relative;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+    .ph_1_1 {background-image: url("images/museum_info/f_1_1.png");}
+    .ph_1_2 {background-image: url("images/museum_info/f_1_2.png");}
+    .ph_2_1 {background-image: url("images/museum_info/f_2_1.png");}
+    .ph_2_2 {background-image: url("images/museum_info/f_2_2.png");}
+    .ph_3_1 {background-image: url("images/museum_info/f_3_1.png");}
+    .ph_3_2 {background-image: url("images/museum_info/f_3_2.png");}
+    .ph_3_3 {background-image: url("images/museum_info/f_3_3.png");}
+
+    .this_p {
+      font-family: "Pragmatica_Bold";
     }
     </style>
     <script type="text/javascript">
@@ -137,7 +151,7 @@
         <a id="s3"  href="afisha.html">афиша</a>
         <a id="s4"  href="events.html">события</a>
         <a id="s5"  href="shop.html">магазин</a>
-        <a id="s6"  href="museum_info.html">о музее</a>
+        <a id="s6" class="this_p"  href="museum_info.html">о музее</a>
     </nav>
 
     <main>
@@ -167,22 +181,22 @@
         <div class="floor f_1">
             <h5>1 этаж</h5>
             <p>На&nbspпервом этаже расположена входная группа, в&nbspкоторую входят гардероб, кафе, уборные и&nbspкасса для&nbspпокупки билетов.</p>
-            <div class="photo_cont_2"></div>
+            <div class="photo_cont_2 ph_1_1"></div>
         </div>
         <div class="floor f_2">
             <h5>2 этаж</h5>
-            <p>Второй этаж - темное пространство с&nbspпервой частю экспозиции*, в&nbspкоторой собраны раснообразные элементы ручной работы. Кадый экспонал уникален и&nbspне&nbspимеет аналогов.</p>
-            <div class="photo_cont_2"></div>
-            <div class="photo_cont_2"></div>
+            <p>Второй этаж — темное пространство с&nbspпервой частью экспозиции,* в&nbspкоторой собраны раснообразные элементы ручной работы. Кадый экспонал уникален и&nbspне&nbspимеет аналогов.</p>
+            <div class="photo_cont_2 ph_2_1"></div>
+            <div class="photo_cont_2 ph_2_2"></div>
 
             <p class="mini_link">*подробнее с&nbspвыставкой можно ознакомиться в&nbspкаталоге</p>
         </div>
         <div class="floor f_3">
             <h5>3 этаж</h5>
             <p>На&nbspтретьем этаже расположена вторая часть выставки, а&nbspименно глифы различных наборных шрифтов</p>
-            <div class="photo_cont_2"></div>
-            <div class="photo_cont_2"></div>
-            <div class="photo_cont_2"></div>
+            <div class="photo_cont_2 ph_3_1"></div>
+            <div class="photo_cont_2 ph_3_2"></div>
+            <div class="photo_cont_2 ph_3_3"></div>
 
         </div>
       </div>
