--- a/museum_info.html
+++ b/museum_info.html
@@ -30,7 +30,7 @@
   grid-column-start: 2;
   border-left: solid 1px black;
   border-right: solid 1px black;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   }
     .video{
       align-items: center;
@@ -193,7 +193,7 @@
         </div>
         <div class="floor f_3">
             <h5>3 этаж</h5>
-            <p>На&nbspтретьем этаже расположена вторая часть выставки, а&nbspименно глифы различных наборных шрифтов</p>
+            <p>На&nbspтретьем этаже расположена вторая часть выставки, а&nbspименно глифы различных наборных шрифтов.</p>
             <div class="photo_cont_2 ph_3_1"></div>
             <div class="photo_cont_2 ph_3_2"></div>
             <div class="photo_cont_2 ph_3_3"></div>
