--- a/events.html
+++ b/events.html
@@ -34,6 +34,8 @@
         height:3em;
         display: flex;
         border: 1px solid black;
+        border-top: none;
+        border-bottom: none;
         box-sizing: border-box;
         align-content: center;
         justify-content: center;
@@ -60,9 +62,9 @@
 
       #s4{ font-family: "Pragmatica_Bold"}
 
-      #night_01 {background-image: url("images/posters/night_01.png");}
-      #night_02 {background-image: url("images/posters/night_02.png");}
-      #night_03 {background-image: url("images/posters/night_03.png");}
+      #night_01 {background-image: url("images/posters/night_01_n.png");}
+      #night_02 {background-image: url("images/posters/night_02_n.png");}
+      #night_03 {background-image: url("images/posters/night_03_n.png");}
 
       #pole_01 {background-image: url("images/posters/pole_01.png");}
       #pole_02 {background-image: url("images/posters/pole_02.png");
@@ -173,8 +175,9 @@
       </div>
 
 
-
-
+      <div class="event_link">зимняя афиша</div>
+      <iframe src="interactive_web_poster/index.html" width="100%" height="900px" align="center">
+      </iframe>
 
     </main>
     <footer>
