--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <div class="mail">
           <p>Подписаться на рассылку</p>
-          <input type="email" name="email" value="tellyourname@gmail.com">
+          <input type="email" name="email" value="" placeholder="tellyourname@gmail.com">
           <button type="button" name="arrow"></button>
       </div>
       <div class="inf_blocks">
