--- a/events.html
+++ b/events.html
@@ -99,9 +99,12 @@
       .p4 {}
       .p5 {}
 
-      @media query {
+        @media only screen and (min-width: 1024px) and (max-width: 1400px) {
 
-      }
+
+          
+        }
+
 
     </style>
     <script type="text/javascript">
