--- a/events.html
+++ b/events.html
@@ -149,6 +149,10 @@
       $(document).ready(function(){
         $(".cover").click(function(){
           $(".image_box").addClass("anim");
+          setTimeout(function(){
+            css background-position: 100%;
+            css
+          })
 
           })
         })
