--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h5>subdiv\<br>\sculpt</h5>
         <a class="mini_link" href="">выставка</a>
       </div>
-      <div class="news">
+      <div class="news fest">
         <h5>летний фестиваль «поле зрения»</h5>
         <a class="mini_link" href="">билеты</a>
       </div>
@@ -61,7 +61,7 @@
         musimpress.com <br>
         </p>
       </div>
-      <div class="inf_blocks">
+      <div class="inf_blocks inst">
           <a href="https://www.instagram.com/j0urn_ey/">instagram</a> <br>
           <a href="https://www.facebook.com/sugumi.su/">facebook</a>
       </div>
