--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,19 @@
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <style media="screen">
+      .product_category{
+
+      }
+      .category_name{
+
+      }
+      .product_card {
+
+      }
+
+
+
+
 
     </style>
     <script type="text/javascript">
@@ -22,6 +35,25 @@
     </nav>
 
     <main>
+
+      <div class="product_category">
+        <div class="category_name">
+
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </main>
     <footer>
