--- a/shop.html
+++ b/shop.html
@@ -6,13 +6,37 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <style media="screen">
       .product_category{
+        width: 100vw;
+        height: auto;
+        display: flex;
+
+      }
+      .product_category:nth-child(1){
+        flex-direction: column;
 
       }
       .category_name{
+        display: flex;
 
+        width: 100vw;
+        height: 72px;
+        font-family: "Pragmatica_Bold";
+        font-size: 1.2em;
+        box-sizing: border-box;
+        border-right: solid 1px black;
+        border-bottom:solid 1px black;
+        text-align: center;
+        text-decoration: none;
+        align-items: center;
+        color: black;
       }
       .product_card {
-
+        width: 25vw;
+        height: 20em;
+        background-color: gray;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
       }
 
 
@@ -37,9 +61,12 @@
     <main>
 
       <div class="product_category">
-        <div class="category_name">
+        <div class="category_name">экспонаты</div>
+        <div class="product_card"></div>
+        <div class="product_card"></div>
+        <div class="product_card"></div>
+        <div class="product_card"></div>
 
-        </div>
       </div>
 
 
