--- a/shop.html
+++ b/shop.html
@@ -15,6 +15,12 @@
         flex-direction: column;
 
       }
+      .products {
+        width: 100vw;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+      }
       .category_name{
         display: flex;
 
@@ -37,6 +43,22 @@
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
+      }
+      .gradient_h {
+        background: rgb(255,255,255);
+        background: -webkit-linear-gradient(rgba(255,255,255,1) 0%, rgba(255,255,255,0) 32%);
+        background: -o-linear-gradient(rgba(255,255,255,1) 0%, rgba(255,255,255,0) 32%);
+        background: linear-gradient(rgba(255,255,255,1) 0%, rgba(255,255,255,0) 32%);
+        opacity: 0;
+        transition: .4s;
+            }
+      .product_card:hover{
+
+            }
+      .photo{
+        width: 100%;
+        height: 100%;
+
       }
 
 
@@ -62,11 +84,28 @@
 
       <div class="product_category">
         <div class="category_name">экспонаты</div>
-        <div class="product_card"></div>
-        <div class="product_card"></div>
-        <div class="product_card"></div>
-        <div class="product_card"></div>
-
+        <div class="products">
+          <div class="product_card">
+            <div class="gradient_h">
+            </div>
+            <div class="photo"></div>
+          </div>
+          <div class="product_card">
+            <div class="gradient_h">
+            </div>
+            <div class="photo"></div>
+          </div>
+          <div class="product_card">
+            <div class="gradient_h">
+            </div>
+            <div class="photo"></div>
+          </div>
+          <div class="product_card">
+            <div class="gradient_h">
+            </div>
+            <div class="photo"></div>
+          </div>
+        </div>
       </div>
 
 
